# orbit

./: .gitignore  .readthedocs.yml  .readthedocs.yml.  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  Simulation_and_testing.ipynb  about.html  genindex.html  getstarted.html  getting_started.html  index.html  install_stan.py  installation.html  modules.html  objects.inv  orbit.backtest.html  orbit.constants.html  orbit.diagnostics.html  orbit.estimators.html  orbit.html  orbit.models.html  orbit.pyro.html  orbit.utils.html  py-modindex.html  pyproject.toml  readme.html  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  (+1 more)
.github/: pull_request_template.md
.github/workflows/: black.yaml  build-dummy.yaml  build.yaml  post-merge-build.yaml  pypi-deploy-test.yaml  pypi-deploy.yaml  python-test.yaml  test.yaml
_sources/: getstarted.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  orbit.diagnostics.rst.txt  orbit.models.rst.txt  readme.rst.txt  tutorials.rst.txt
_sources/tutorials/: DLT Model.ipynb.txt  Diagnostics.ipynb.txt  backtest.ipynb.txt  decompose_prediction.ipynb.txt  dlt.ipynb.txt  lgt.ipynb.txt  pyro_basic.ipynb.txt  quick_start_LGT.ipynb.txt  regression.ipynb.txt
_static/: documentation_options.js
docs/: about.rst  changelog.rst  conf.py  environment-py38-rtd.yml  getting_started.rst  index.rst  modules.rst  orbit.backtest.rst  orbit.constants.rst  orbit.diagnostics.rst  orbit.estimators.rst  orbit.models.rst  orbit.pyro.rst  orbit.rst  orbit.utils.rst  readme.rst  requirements-docs.txt  tutorials.rst
docs/tutorials/: Backtest_v2.ipynb  LGT Model.ipynb  Orbit ARMA tests .ipynb  Pyro in Orbit.ipynb  Quick Start.ipynb  Untitled.ipynb  WBIC_example.ipynb  backtest.ipynb  bic.ipynb  build_your_own_model.ipynb  components_plotting.ipynb  decompose_prediction.ipynb  diagnostics.ipynb  dlt.ipynb  eda_function_demo.ipynb  ets_lgt_dlt_missing_response.ipynb  exploratory_data_analysis.ipynb  ktr1.ipynb  ktr2.ipynb  ktr3.ipynb  ktr4.ipynb  ktrlite.ipynb  lgt.ipynb  make_future_dataframe.ipynb  mcmc_model_diagnostics.ipynb  model_diagnostics.ipynb  model_estimations.ipynb  (+14 more)
examples/: ARMA_exploring.ipynb  Backtest_Debug.ipynb  Backtest_Example.ipynb  Backtest_External_Models.ipynb  Backtest_Misc.ipynb  Backtest_Multi_Model.ipynb  Backtest_Orbit_Model.ipynb  Backtest_Tune_DLT.ipynb  DLT_Example.ipynb  DLT_Example2.ipynb  Daily_Forecast_Example.ipynb  Dev Linear Regression Estimator.ipynb  Diagnostic_viz_demo.ipynb  Dual_Seasonality.ipynb  ETS.ipynb  GAM_Pyro_Example.ipynb  GAM_Pyro_Example2.ipynb  Hyperparameter_Tuning_Example .ipynb  KTR_Example.ipynb  KTR_Pyro_Example.ipynb  LGT_Example.ipynb  LGT_Pyro_Example.ipynb  Missing_value_example[ETS-LGT-DLT].ipynb  Orbit_Backtest.ipynb  Regression.ipynb  Regression_Advance.ipynb  Regression_Advance1.ipynb  Regression_Advance2.ipynb  Regression_Basic.ipynb  Regression_Example.ipynb  Regressors_setup_demo.ipynb  WBIC_tutorial.ipynb  _test_style_palette.ipynb  arma_test.ipynb  backtest.ipynb  backtest_animation.ipynb  backtest_ktr.ipynb  build_your_own_model.ipynb  color_palettes.ipynb  color_palettes_testing.ipynb  (+51 more)
orbit/: __init__.py  __version__.py  backtest.py  cmdstan_version.json  config.json  dlt.py  dlt_rh.py  estimator.py  eswr.py  exceptions.py  lgt.py  metrics.py  models.py  orbit.py  plot_style.mplstyle  stan_estimator.py
orbit_v1/: orbit.py
tests/: conftest.py  test_backtest.py  test_dlt.py  test_example.py  test_lgt.py  test_model_performance.py  test_pyro.py  test_setup.py  test_stan_estimator.py  test_uts.py
tutorial/: Backtest Orbit Model.html  Backtest Orbit Model.ipynb  DLT Model.html  Diagnostics.html  LGT Model.html  Makefile  Pyro in Orbit.html  Quick Start.html  Regressions with Orbit.html  dlt_example.html  genindex.html  index.html  lgt_example.html  objects.inv  quick_start.html  quick_start.ipynb  search.html  searchindex.js
tutorials/: Backtest Orbit Model.html  DLT Model.html  Diagnostics.html  LGT Model.html  Pyro in Orbit.html  Quick Start.html  Regressions with Orbit.html  backtest.html  decompose_prediction.html  diagnostics.html  dlt.html  dlt.ipynb  lgt.html  lgt.ipynb  model_diagnostics.html  model_diagnostics.ipynb  model_estimations.html  pyro_basic.html  quick_start.html  quick_start_DLT.html  quick_start_DLT.ipynb  quick_start_LGT.html  regression.html  utilities_simulation.html
uTS/: backtest.py  dlt.py  lgt.py  models.py  stan_estimator.py
(+188 files in other folders)
