[tool.black]
line-length = 88
target-version = ['py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "cmdstanpy>=1.0.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-ml"
dynamic = ["version"]
description = "Orbit is a package for Bayesian time series modeling and inference."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "arviz",
  "cmdstanpy>=1.0.4",
  "importlib_resources",
  "matplotlib>=3.3.2",
  "numpy>=1.18",
  "pandas>=1.0.3",
  "pyro-ppl>=1.4.0",
  "scipy>=1.4.1",
  "seaborn>=0.10.0",
  "statsmodels>=0.11.1",
  "torch>=1.11.0",
  "tqdm>=4.36.1",
]
license = {text = "Apache License 2.0"}
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
[project.optional-dependencies]
dev = [
  "setuptools>=64",
  "wheel",
  "pytest",
  "black",
]