[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "cmdstanpy>=1.0.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-ml"
authors = [
  {name="Edwin Ng"}, 
  {name="Zhishi Wang"}, 
  {name="Steve Yang"}, 
  {name="Yifeng Wu"}, 
  {name="Jing Pan"},
]
maintainers = [
  {name = "Edwin Ng", email = "edwinnglabs@gmail.com"},
]
dynamic = ["version"]
description = "Orbit is a package for Bayesian time series modeling and inference."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "arviz>=0.17.1",
  "cmdstanpy>=1.2.1",
  "importlib_resources>=6.4.0",
  "ipywidgets",
  "matplotlib>=3.8.3",
  "numpy>=1.26.4",
  "pandas>=2.2.1",
  "pyro-ppl>=1.9.0",
  "scipy>=1.12.0",
  "seaborn>=0.13.2",
  "setuptools>=42",
  "statsmodels>=0.14.1",
  "torch>=2.2.1",
  "tqdm>=4.66.2",
]
license = {text = "Apache License 2.0"}
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
[project.optional-dependencies]
dev = [
  "setuptools>=64",
  "wheel",
  "pytest",
  "black",
]
[project.urls]
Documentation = "https://orbit-ml.readthedocs.io/en/stable/"
Repository = "https://github.com/uber/orbit"